Migrate some charts to kubernetes/helm v2.0.0-alpha.2

--- a/memcached/Chart.yaml
+++ b/memcached/Chart.yaml
@@ -1,9 +1,10 @@
 name: memcached
-home: http://https://hub.docker.com/_/memcached/
-version: 0.1.0
 description: A simple Memcached cluster
+version: 0.1.0
+home: http://https://hub.docker.com/_/memcached/
 maintainers:
-- Matt Butcher <mbutcher@deis.com>
+- name: Matt Butcher
+  email: mbutcher@deis.com
 details: |-
   Memcached is a simple cache server. This chart provides multiple replication
   controllers that can be grouped together into a cluster.
