--- a/redis-standalone/Chart.yaml
+++ b/redis-standalone/Chart.yaml
@@ -1,9 +1,14 @@
 name: redis-standalone
-home: http://github.com/deis/helm
-version: 0.0.1
 description: Standalone Redis Master
+version: 0.0.1
+keywords:
+  - redis
+  - cache
+  - kv
+home: http://github.com/deis/helm
 maintainers:
-  - Gabe Monroy <gabe@deis.com>
+  - name: Gabe Monroy
+    email: gabe@deis.com
 details:
   This package provides a standalone Redis master useful for prototyping.
   Note this does not include any high availability.
