--- a/mysql/Chart.yaml
+++ b/mysql/Chart.yaml
@@ -1,8 +1,9 @@
 name: mysql
+description: Chart running MySQL.
 home: https://www.mysql.com/
 version: 0.2.0
-description: Chart running MySQL.
 maintainers:
-  - Matt Fisher <mfisher@deis.com>
+  - name: Matt Fisher
+    email: mfisher@deis.com
 details:
   This package provides a basic MySQL database for development purposes.
